@@ -1,3 +1,12 @@
+2005-10-10  Jürg Billeter  <j@bitron.ch>
+
+	reviewed by: Sergey V. Udaltsov  <svu@gnome.org>
+
+	* schemas/Makefile.am:
+	* schemas/desktop_gnome_peripherals_keyboard.schemas.in:
+	Add schema for remembering NumLock state between sessions.
+	Fixes bug #74215. Patch by Sebastian Kapfer  <sebastian_kapfer@web.de>
+
 2005-10-03  Sebastien Bacher  <seb128@debian.org>
 
 	* configure.in: update for 2.12.1.
